Bugfix/saf 1713/itinerary desktop (#265)
* Fix on paragraphs margins

* Header was overlapping the page title

* Heading component and typography types to use in headings or paragraphs

* Typography components: Heading and Paragraph

* Fix on itinerary desktop and fix on padding in some components

* Missing curly brace

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -73,6 +73,9 @@
   input[type='checkbox'] {
     @apply relative h-6 w-6 text-primary-600 border-dark-300 rounded-4 checked:bg-primary-1000 checked:border-primary-1000 checked:focus:bg-primary-1000 checked:hover:bg-primary-1000 focus:ring-0 focus:ring-offset-0;
   }
+  p {
+    margin: 0 !important;
+  }
 }
 
 .plg {
